--- a/arch/arm64/configs/lineage_urd_defconfig
+++ b/arch/arm64/configs/lineage_urd_defconfig
@@ -196,7 +196,6 @@ CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
 CONFIG_BRIDGE=y
-CONFIG_NET_KEY=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_PRIO=y
@@ -224,6 +223,7 @@ CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 CONFIG_MSM_BT_POWER=y
 CONFIG_CFG80211=y
+CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
 # CONFIG_NFC_QNCI=y
@@ -475,6 +475,7 @@ CONFIG_UIO=y
 CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ZSMALLOC=y
+CONFIG_PROC_DEVICETREE=y
 CONFIG_ZRAM=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
