--- a/arch/arm64/configs/lineage_urd_defconfig
+++ b/arch/arm64/configs/lineage_urd_defconfig
@@ -1,4 +1,5 @@
-
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+CONFIG_PROC_DEVICETREE=y
 # Enable ZTE HALLS
 CONFIG_ZTE_HALL_AVAILABLE=y
 
